typescript/checker/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName31.ts.stderr
error: TS1166 {
    span: Span {
        lo: BytePos(
            44,
        ),
        hi: BytePos(
            55,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName31.ts:4:5
  |
4 |     [e]: number
  |     ^^^^^^^^^^^

error: UndefinedSymbol {
    sym: Atom('e' type=inline),
    span: Span {
        lo: BytePos(
            45,
        ),
        hi: BytePos(
            46,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName31.ts:4:6
  |
4 |     [e]: number
  |      ^

error: TS1166 {
    span: Span {
        lo: BytePos(
            60,
        ),
        hi: BytePos(
            72,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName31.ts:5:5
  |
5 |     [e2]: number
  |     ^^^^^^^^^^^^

error: UndefinedSymbol {
    sym: Atom('e2' type=inline),
    span: Span {
        lo: BytePos(
            61,
        ),
        hi: BytePos(
            63,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName31.ts:5:6
  |
5 |     [e2]: number
  |      ^^

